@@ -4,6 +4,7 @@ glide (2002.04.10ds1-9) UNRELEASED; urgency=low
   * Ignore error from db_unregister in case the template does not exist.
     (Closes: #708341)
   * Remove useless debian/BUGS file, these are tracked in the BTS.
+  * Pass CPPFLAGS, CFLAGS and LDFLAGS to upstream build system.
   * Debconf template translations:
     - Update Danish (Joe Dalton). (Closes: #708896)
     - Update Galician (Jorge Barreiro). (Closes: #708875)
